--- a/src/app/components/accueil/accueil.component.scss
+++ b/src/app/components/accueil/accueil.component.scss
@@ -1,113 +1,32 @@
-#toggle{
-    visibility: hidden;
-    opacity: 0;
-    position: relative;
-    z-index: 99;
-  
-  }
-  
-  #toggle:checked ~ dialog {
-    display: block;
-  }
-  .popup{
-  margin-bottom: 0px;
-  }
-  
-  .add{ background: skyblue;
-    color: white;
-    padding: .5em 1em;
-    border-radius: 4px;
-    top: 13%;
-  
-  }
-  .close{
-  margin-left: 90%;
-  }
-  
-  label{
-    background: skyblue;
-    color: white;
-    padding: .5em 1em;
-    border-radius: 2px;
-  
-  }
-  @keyframes appear {
-    0%{
-      opacity: 0;
-      transform: translateY(-10px);
-    }
-  }
-  
-  dialog{
-    animation: appear 350ms ease-in 1;
-    max-width: 500px;
-    z-index: 99;
-  }
-  
-  .profilcard{
-    box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-    background-color: rgba(128, 128, 128, 0.096);
-  
-    border-radius: 2%;
-      text-align: center;
-      margin-top: 10px;
-      margin-left: 10%;
-      margin-bottom: px;
-    }
-  .paiementcard{
-        box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-        background-color: rgba(128, 128, 128, 0.096);
-      
-        border-radius: 2%;
-          text-align: center;
-          margin-top: 10px;
-          margin-left: 10%;
-          
-        }
-  .albumcard{
-            box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-            background-color: rgba(128, 128, 128, 0.096);
-          
-            border-radius: 2%;
-              text-align: center;
-              margin-top: 10px;
-              margin-left: 10%;
-              
-            }
-  .evaluationcard{
-                box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-                background-color: rgba(128, 128, 128, 0.096);
-              
-                border-radius: 2%;
-                  text-align: center;
-                  margin-top: 10px;
-                  margin-left: 10%;
-  }
-  .evaluationcard .card {
-    text-align: center;
-    margin-top: 10px;
-    margin-left: 10%;
-    margin-right: 10%;
-    font-size: 20px;
-  }
-  
-  .row{
-    width: 100%;
-  }  
-  .collapse {
-    &:not(.show) {
-      display: none;
-    }
-  }
-  
-  .collapsing {
-    height: 0;
-    overflow: hidden;
-  //@include transition($transition-collapse);
-  
-    &.collapse-horizontal {
-      width: 0;
-      height: auto;
-  //@include transition($transition-collapse-width);
-    }
-  }
+.card1{
+  margin-left:3%;
+  margin-top:8%;
+  width: 900px;
+ 
+}
+.cl{
+  display: grid;
+  grid-template-columns: 900px 600px;
+  gap: 5%;
+ height: 87vh;
+ margin-left: 1%;
+ width: 98%;
+background-color:#aac8d627;
+}
+.twostat{
+  display: grid;
+  grid-template-columns:10% 10%;
+  gap: 50%;
+}
+.two{
+  margin-top: 12%;
+  display: grid;
+  grid-template-rows: 45% 55%;
+  gap: 5%;
+}
+.stat{
+  width: 300px;
+}
+.stat2{
+  width: 300px;
+}
