--- a/src/app/components/classe/classe.component.scss
+++ b/src/app/components/classe/classe.component.scss
@@ -61,7 +61,7 @@ margin-top: 1%;
 margin-left: 0.5%;
 margin-right: 0.5%;
  height: 100%;
-    background-color: #A8C3D0;
+    background-color: #aac8d627;
 
       }
       
