--- a/src/app/components/paiement/paiement.component.scss
+++ b/src/app/components/paiement/paiement.component.scss
@@ -6,10 +6,10 @@
     height: 89vh;
 }
 .paiement{
-    background-color: #A8C3D0;
+    background-color: #aac8d627;
 }
 .stat{
-    background-color: #A8C3D0;
+    background-color: #aac8d627;
    
 }
 .card{
