--- a/src/app/components/classe/liste-eleve/liste-eleve.component.html
+++ b/src/app/components/classe/liste-eleve/liste-eleve.component.html
@@ -1,24 +1,29 @@
 <app-dashboard></app-dashboard>
 
-<div class="tot">
+<div class="con">
 
-  <div class="one">
-    <div class="pop">
-      <input type="checkbox" id="toggle">
-      <label for="toggle" class=" btn btn-primary add">Add</label>
 
-      <dialog>
+
+
+  <div class="titre">
+    <h1 class="tit" style="margin-top: 40px; font-weight: strong;">Liste de présence</h1>
+    <div class="pop"style="margin-top:8%">
+
+      <p-button (click)="showBasicDialog()" icon="pi pi-external-link" label="Ajout" class="add" ></p-button>
+      <p-dialog header="Ajout" [(visible)]="displayBasic" [style]="{width: '50vw'}" [baseZIndex]="10000">
+
         <form class="row g-3" #addForms="ngForm" (ngSubmit)="addEleve(addForms)">
 
-          <div class="col-md-6">
+          <div class="col-md-5">
             <label for="inputnom" class="form-label">Nom</label>
             <input type="text" class="form-control" name="nom" id="inputnom" ngModel>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-5">
             <label for="inputprenom" class="form-label">Prenom</label>
             <input type="text" class="form-control" name="prenom" id="inputprenom" ngModel>
+
           </div>
-          <div class="col-md-4">
+          <div class="col-md-2">
             <label for="inputGenre" class="form-label">Genre</label>
             <select id="inputGenre" class="form-select" name="genre" ngModel>
               <option selected>Choisir</option>
@@ -37,9 +42,9 @@
           </div>
           <div class="col-md-4">
             <label for="inputPoid" class="form-label">Date</label>
-            <input type="date" class="form-control" id="inputPoid" name="date" ngModel>
+            <input type="date" class="form-control" id="inputPoid" name="date_nais" ngModel>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-2">
             <label for="inputVaccinaction" class="form-label">Vaccinaction</label>
             <select id="inputVaccinaction" class="form-select" name="vaccination" ngModel>
               <option selected>Choisir</option>
@@ -47,160 +52,97 @@
               <option>Non</option>
             </select>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-5">
             <label for="inputMaladies" class="form-label">Maladies</label>
             <input type="text" class="form-control" id="inputMaladies" name="maladies" ngModel>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-5">
             <label for="inputMedicament" class="form-label">Médicament</label>
             <input type="text" class="form-control" id="inputMedicament" name="medicament" ngModel>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <label for="inputparent" class="form-label">Prenom parent</label>
             <input type="text" class="form-control" id="inputparent" name="nom_parent" ngModel>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <label for="inputtel" class="form-label">Télèphone parent</label>
             <input type="text" class="form-control" id="inputtel" name="tel_parent" ngModel>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-4">
             <label for="inputEmail4" class="form-label">Email</label>
             <input type="email" class="form-control" id="inputEmail4" name="email_parent" ngModel>
           </div>
-          <div class="col-12">
+          <div class="col-md-6">
             <label for="inputAddress" class="form-label">Address</label>
             <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="adresse" ngModel>
           </div>
-          <input id="img" type="file" (change)="onFileChanged($event)">
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary">Save</button>
+          <div class="col-md-4">
+            <input id="img" type="file" (change)="onFileChanged($event)">
           </div>
-          <div class="col-12">
-            <label for="toggle">close </label>
+
+
+          <div class="enre col-md-12"  style="text-align:center;">
+            <button type="submit" class="btn btn-primary">Enregistrer</button>
           </div>
+          
         </form>
-      </dialog>
+
+      </p-dialog>
+
     </div>
 
 
 
-    <div class="tab">
-      <h1 className="title">Liste d'eleves</h1>
-      <table class="table table-hover" style="margin-right: 1.2%; ">
-
-
-        <thead>
-
-
-          <tr>
-            <th scope="col">Nom</th>
-
-          </tr>
-
-
-        </thead>
-
-        <tbody>
-          <tr *ngFor="let p of classeInput?.eleves">
-
-            <td class="lis">
-              <a [routerLink]="['/profileleve',p.idEleve]"
-                style="text-decoration: none; color: black; font-size: 22px;">{{p.nom}} </a>
-
-              <div class="dang">
-             
-                  <i class="fa fa-trash" style="color: white;" (click)="onDeleteEleve(p.idEleve)"></i>
-              </div>
-
-            </td>
-          </tr>
-        </tbody>
 
 
 
-      </table>
-    </div>
+    <p-button label="Enregistrer" class="save" (click)="saveAllPresences()" icon="pi pi-check" iconPos="right"></p-button>
+    <input type="date" name="date" class="form-control" id="date" value="{{ week[0] }}"style="height: max-content; margin-top: 10%;"
+      placeholder="Select date" (change)="onChangeSelect($event)">
+
+
   </div>
 
-  <div class="two">
-   <div class="titre">
-     <h1 className="title">Liste de présence</h1>
-    <button (click)="saveAllPresences()" style="font-family:'Mukta', sans-serif;
-    font-size: large;  border-radius:5px">save </button>
-    <select (change)="onChangeSelect($event)" style="font-family:'Mukta', sans-serif;
-    font-size: large; border-radius:5px">
-      <option value="">select week</option>
-      <option *ngFor="let week of listOfWeeks" value="{{week[0]}}">from {{week[0]}}</option>
-    </select></div>
-    
-     
-    
-
-    <table >
-      
-      <div class="thead" >
 
 
-        <tr >
-          <th >Nom</th>
-         
-          
-          <th *ngFor="let day of week" > {{ day }}</th>
+
+
+
+  <div class="tabb">
+    <p-table [value]="classeInput?.eleves" [paginator]="true" [rows]="10" sortMode="multiple">
+      <ng-template pTemplate="header">
+        <tr style="font-family:'Mukta', sans-serif;
+        font-size: large;">
+          <th>Nom</th>
+          <th *ngFor="let day of week"> {{ day }}</th>
+          <th></th>
         </tr>
-        <tr *ngFor="let p of classeInput?.eleves">
-          <td style="font-size: 22px;">{{p.nom}}</td>
-          <!--td> <input type="checkbox" [checked]="p.select"></td> 
-          <td> <input type="checkbox" [checked]="p.select"></td>
-          <td> <input type="checkbox" [checked]="p.select"></td>
-          <td> <input type="checkbox" [checked]="p.select"></td>
-          <td> <input type="checkbox" [checked]="p.select"></td>
-          <td> <input type="checkbox" [checked]="p.select"></td-->
+      </ng-template>
+      <ng-template pTemplate="body" let-p>
+        <tr>
+          <td style="font-size: 22px;">
+
+            <a [routerLink]="['/profileleve',p.idEleve]" style="text-decoration: none; color: black; font-size: 22px;">
+              <img [src]="'data:image/jpg;base64,'+p.img">{{p.nom}} </a>
+          </td>
           <td *ngFor="let day of p.weekPresence">
-            <input class="form-check-input" type="checkbox" [checked]="day.etat" (click)="changeEtatPresence(day,$event)" >  
+            <input class="form-check-input" type="checkbox" [checked]="day.etat"
+              (click)="changeEtatPresence(day,$event)">
           </td>
           <td>
-            <div class="pop">
-              <input type="checkbox" id="toggle2">
-  
-  
-              <label for="toggle2" class="view"><li class="pi pi-search" style="color: white;"></li></label>
-  
-              <dialog>
-  
-                <p *ngFor="let p of listPresences">{{p.etat?'Present':'absent'}} {{p.datePE}}</p>
-                <div class="col-12">
-                  <label for="toggle2">close </label>
-                </div>
-              </dialog>
-            </div>
+
+            <button (click)="confirm2(p.idEleve)" style="width: max-content;height: max-content;" pButton icon="pi pi-times" label="Supprimer"></button>
           </td>
         </tr>
-
-      </div>
-    </table>
-     
-       
-     
-      <div class="tbl-content">
-<!-- -->
-
-      </div>
-<!--tabV2-->
-<div class="tbl-content">
-
-  <table>
-
-      
-
-
-    </table>
-  </div>
-  
-
-   
-
+      </ng-template>
+    </p-table>
 
   </div>
+
+
+
+
+
 
 </div>
