--- a/src/app/components/classe/liste-eleve/liste-eleve.component.scss
+++ b/src/app/components/classe/liste-eleve/liste-eleve.component.scss
@@ -1,29 +1,39 @@
 
-#toggle{
-    visibility: hidden;
-    opacity: 0;
-    position: relative;
-    z-index: 99;
-  }
-  
-  #toggle:checked ~ dialog {
-    display: block;
-  }
 
-  label{ 
-    border-radius: 4px;}
   .add{
-   
-    color: white;
-    margin-top: 1%;
-    margin-left: 3px;
+   color: white;
 
+font-family:'Mukta', sans-serif;
+  font-size: larger; 
     border-radius: 4px;
-  }
-td:hover{
-  background-color: white;
-}
+    text-align: center;
 
+  }
+
+  select{
+    font-family:'Mukta', sans-serif;
+    font-size: larger;
+    margin-top: 8%; 
+     border-radius:5px;
+     border-color: steelblue;
+     width: max-content; 
+  }
+  .save{
+    font-family:'Mukta', sans-serif;
+     font-size: larger;
+     margin-top: 8%; 
+      border-radius:5px
+  }
+  .tabb{
+    margin-top: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+p-table{
+  margin: 1%;
+
+}
 
   
 #toggle2{
@@ -37,14 +47,19 @@ td:hover{
   display: block;
 }
 
-label{ 
-  border-radius: 4px;}
+
+
 
   @keyframes appear {
     0%{
       opacity: 0;
       transform: translateY(-10px);
     }
+  }
+  img{
+    height: 80px;
+    width: 120px;
+    border-radius: 30%;
   }
  
   dialog{
@@ -113,11 +128,8 @@ table {
   border: 1px solid #ddd;
 }
 
-th, td {
-  text-align: left;
-  padding: 18px;
-  
-}
+
+
 
 @media screen and (max-width:763px) {
   .roww{
@@ -134,25 +146,33 @@ th, td {
 }
 
 
-.tot{
-  display: grid;
-  grid-template-columns: 650px  auto;
-  gap: 1%;
-  margin: 1%;
+.con{
+  background-color: #aac8d627;
   height: 88vh;
- 
+  width:96.5vw ;
+  margin-left: 1%;
+  margin-right: 1%;
 }
-.one{
-  background-color: #A8C3D0;
-}
+
 .two{
-  background-color: #A8C3D0;
+  background-color: #aac8d627;
 
 }
 .titre{
   margin-left: 2%;
-  margin-top: 2%;
+  margin-top: 1%;
   display: grid;
-  gap: 1%;
-  grid-template-columns: 30% 15% 15%;
+  grid-template-columns: 32% 11% 11% 11%;
 }
+
+
+th{
+font-family:'Mukta', sans-serif;
+  font-size: larger; 
+}
+.titt{
+  display: grid;
+  grid-template-columns: 71% 11%;
+  margin-top: 1.5%
+}
+
