--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,32 +2,32 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <nav class="dash" >
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="bi bi-list"></i>
-      </label>
-      <label class="logo">Welcome</label>
-      <ul class="navlinks">
-        <li class="pi pi-home" style="color: white;"> <a [routerLink]="['/accueil']">Home</a></li>
+<nav class="dash">
+  <input type="checkbox" id="check">
+  <label for="check" class="checkbtn">
+    <i class="bi bi-list"></i>
+  </label>
+  <label class="logo">Bienvenue</label>
+  <ul class="navlinks">
+    <li class="pi pi-home" style="color: white;"> <a [routerLink]="['/accueil']">Accueil</a></li>
 
-        <li class="dropdown">
-          <a  class=" pi pi-chevron-down" href="#">Employe
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu" >
-            <li class="divider"></li>
-            <li><a routerLink="/listemp">Employe</a></li>
-            <li><a href="presence">Presence</a></li>
-          </ul>
-        </li>
-      
-           <li class="pi pi-plus" style="color: white;"><a [routerLink]="['/classe']">Classe</a></li> 
-            <li class="pi pi-plus"style="color: white;"><a [routerLink]="['/activite/:id']">Activités</a></li> 
-              <li class="pi pi-money-bill" style="color: white;"><a [routerLink]="['/paiement']">Paiement</a></li> 
-                <li class="pi pi-shopping-cart" style="color: white;"><a [routerLink]="['/stock']">Stock</a></li> 
-                <li><a class="nav-link" (click)="deconnecter()" ><p class="text-right"><i class="fa fa-sign-out"></i>Log Out </p></a> 
-                </li>
-            </ul>
-    </nav>
-    <section></section>
+    <li class="dropdown">
+      <a class=" pi pi-chevron-down" href="#">Employe
+        <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li class="divider"></li>
+        <li><a routerLink="/listemp">Employe</a></li>
+        <li><a href="presence">Presence</a></li>
+      </ul>
+    </li>
 
+    <li class="pi pi-plus" style="color: white;"><a [routerLink]="['/classe']">Classe</a></li>
+    <li class="pi pi-plus" style="color: white;"><a [routerLink]="['/activite']">Activités</a></li>
+    <li class="pi pi-money-bill" style="color: white;"><a [routerLink]="['/paiement']">paiement</a></li>
+    <li class="pi pi-shopping-cart" style="color: white;"><a [routerLink]="['/stock']">stock</a></li>
+    <li><a class="nav-link" (click)="deconnecter()">
+        <p class="text-right"><i class="fa fa-sign-out"></i>Déconnexion</p>
+      </a>
+    </li>
+  </ul>
+</nav>
