--- a/src/app/components/employe/presence/presence.component.html
+++ b/src/app/components/employe/presence/presence.component.html
@@ -1,98 +1,39 @@
 <app-dashboard></app-dashboard>
 
- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
-	<div class="row">
-		
+	<div class="two">
+
 	
+		<div class="titre">
+			<h1 className="title" style="margin: 6%;">Liste de présence</h1>
 
+			<p-button label="Enregistrer" (click)="saveAllPresences()" style="margin-top:10%"  icon="pi pi-check" iconPos="right"></p-button>
+			<input type="date" name="date"  class="form-control" value="{{ week[0] }}" style="height: max-content; margin-top:11%;" id="date" placeholder="Select date" (change)="onChangeSelect($event)">
+		</div>
 
+		<div class="tabb">
+		<p-table [value]="employees" [paginator]="true" [rows]="10" sortMode="multiple">
+			<ng-template pTemplate="header">
+				<tr style="font-family:'Mukta', sans-serif;
+			font-size: large;">
+					<th>Nom</th>
+					<th *ngFor="let day of week"> {{ day }}</th>
+				</tr>
+			</ng-template>
+			<ng-template pTemplate="body" let-p>
+				<tr>
+					<td style="font-size: 22px;">{{p.nom}}<img [src]="'data:image/jpg;base64,'+p.img"></td>
+					<td *ngFor="let day of p.weekPresence">
+						<input class="form-check-input" type="checkbox" [checked]="day.etat"
+							(click)="changeEtatPresence(day,$event)">
+					</td>
+				</tr>
+			</ng-template>
+		</p-table>
+	</div>
 
-			<div class="col-lg-8 col2">
-				<h1 className="ClaimListTitle">Liste de présence</h1>
-				<div class="tbl-header">
-					<table cellpadding="0" cellspacing="0" border="0">
-						<thead>
-							<tr>
-								<th>Nom</th>
-								<th>Etat</th>
-								<th>Action</th>
-								
-							</tr>
-						</thead>
-					</table>
-				</div>
-				<div class="tbl-content">
-					<table cellpadding="0" cellspacing="0" border="0">
-						<tbody>
-							<tr *ngFor="let p of employees">
-								<td>{{p.nom}}</td>
-								<!--td> <input  type="checkbox" [checked]="p.select"></td>
-								<td> <input  type="checkbox" [checked]="p.select"></td>
-								<td> <input  type="checkbox" [checked]="p.select"></td>
-								<td> <input  type="checkbox" [checked]="p.select"></td>
-								<td> <input  type="checkbox" [checked]="p.select"></td>
-								<td> <input  type="checkbox" [checked]="p.select"></td-->
-								
-								<td><select name="eleves" (change)="presenceClick(p,$event)">
-									<option selected  value="" disabled>select etat</option>
-									<option value="true">present</option>
-									<option value="false">absent</option>
-									</select> </td> 
-								<td>
-									<td>
-										<div class="pop">
-										  <input type="checkbox" id="toggle">
-						  
-										  
-										  <label for="toggle" class="add" (click)="getPresences(p)"><i class="bi bi-search"></i></label>
-									  
-										  <dialog>
-											
-											<p *ngFor="let p of presences">{{p.etat?'Present':'absent'}} {{p.date}}</p>
-											<div class="col-12">
-											  <label for="toggle">close </label>
-											</div>
-										  </dialog>
-										</div>
-									  </td>
-
-							</tr>
-						
-
-						</tbody>
-					</table>
-					
-				</div>
-			
-			</div>
-		
-		
-	
-</div>
+	</div>
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
- 
-  
