--- a/src/app/components/employe/presence/presence.component.scss
+++ b/src/app/components/employe/presence/presence.component.scss
@@ -21,16 +21,16 @@
       transform: translateY(-10px);
     }
   }
-  
+  img{
+    height: 60px;
+    width: 100px;
+    border-radius: 50%;
+  }
   dialog{
     animation: appear 350ms ease-in 1;
     max-width: 500px;
   }
 
-
-
-
-  
 .row{
   margin-left: 0;
 
@@ -61,11 +61,7 @@ padding-top: 3px;
 a{
 color:#be4147;
 }
-.col2{ width: 66%;
-padding-left: 9%;
 
-
-}
 .submit{
 background-color: #be4147;
 color:white;
@@ -73,214 +69,53 @@ margin-top: 2px;
 
 }
 
-/* TABLES */
-.table {
-  border-collapse: separate;
-  width: 110%;
-
-}
-.table-hover > tbody > tr:hover > td,
-.table-hover > tbody > tr:hover > th {
-background-color: #eee;
-}
-.table thead > tr > th {
-border-bottom: 1px solid #22578a;
-padding-bottom: 0;
-}
-.table tbody > tr > td {
-font-size: 0.875em;
-background: #ffffff;
-border-top: 10px solid #fff;
-vertical-align: middle;
-padding: 12px 8px;
-}
-.table tbody > tr > td:first-child,
-.table thead > tr > th:first-child {
-padding-left: 15px;
-}
-.table thead > tr > th span {
-border-bottom: 2px solid #22578a;
-display: inline-block;
-padding: 0 5px;
-padding-bottom: 5px;
-font-weight: normal;
-}
-.table thead > tr > th > a span {
-color: #344644;
-}
-.table thead > tr > th > a span:after {
-content: "\f0dc";
-font-family: FontAwesome;
-font-style: normal;
-font-weight: normal;
-text-decoration: inherit;
-margin-left: 5px;
-font-size: 0.75em;
-}
-.table thead > tr > th > a.asc span:after {
-content: "\f0dd";
-}
-.table thead > tr > th > a.desc span:after {
-content: "\f0de";
-}
-.table thead > tr > th > a:hover span {
-text-decoration: none;
-color: #fff;
-border-color: #fff;
-}
-.table.table-hover tbody > tr > td {
--webkit-transition: background-color 0.15s ease-in-out 0s;
-transition: background-color 0.15s ease-in-out 0s;
-}
-.table tbody tr td .call-type {
-display: block;
-font-size: 0.75em;
-text-align: center;
-}
-.table tbody tr td .first-line {
-line-height: 1.5;
-font-weight: 400;
-font-size: 1.125em;
-}
-.table tbody tr td .first-line span {
-font-size: 0.875em;
-color: #969696;
-font-weight: 300;
-}
-.table tbody tr td .second-line {
-font-size: 0.875em;
-line-height: 1.2;
-}
-.table a.table-link {
-margin: 0 5px;
-font-size: 1.125em;
-  color: #22578a;
-}
-.table a.table-link:hover {
-text-decoration: none;
-color: #ebebeb;
-}
-.table a.table-link.danger {
-color: #fe635f;
-}
-.table a.table-link.danger:hover {
-color: #ebebeb;
-}
-
-.table-products tbody > tr > td {
-background: none;
-border: none;
-border-bottom: 1px solid #ebebeb;
--webkit-transition: background-color 0.15s ease-in-out 0s;
-transition: background-color 0.15s ease-in-out 0s;
-position: relative;
-}
-.table-products tbody > tr:hover > td {
-text-decoration: none;
-background-color: #f6f6f6;
-}
-.container{
- width: 130em;
- margin-left: 0%;
-}
-.ClaimListTitle {
-  font-family: 'Audiowide', cursive;
-  margin-bottom : 0px;
-  letter-spacing: 1px;
-  font-size: 25px;
-  margin-left: 220px;
-  margin-top: 80px;
-  text-align:left;
-  color: brown;
-}
-
-/* liste presence*/ 
 
 
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2&display=swap');
-
-.ClaimListTitle {
-  font-family: 'Audiowide', cursive;
-  margin-bottom : 0px;
-  letter-spacing: 1px;
-  font-size: 25px;
-  margin-left: 220px;
-  margin-top: 80px;
-  text-align:left;
-  color: brown;
+.titre{
+  display: grid;
+  grid-template-columns: 35% 15% 15% ;
+  margin-top: 1%;
+  margin-left: 2%;
 }
 
-.editIcon {
-  margin-right: 10px;
-  padding : 5px 5px 5px 5px;
-  color: #eeea0b;
-  font-size: 16px;
-  background-color: rgb(252, 252, 252);
-  border-radius: 60px;
+.two{
+  background-color: #aac8d627;
+height: 88vh;
+width:96.5vw ;
+margin-left: 1%;
+margin-right: 1%;
+
+
+
 }
+.con{
 
-.zoomIcon {
-  margin-right: 10px;
-  font-size: 16px;
-  padding : 5px 5px 5px 5px;
-  color: #269617;
-  background-color: rgb(255, 255, 255);
-  border-radius: 60px;
 }
-
-.deleteIcon {
-  margin-right: 10px;
-  font-size: 16px;
-
-  padding : 5px 5px 5px 5px;
-  color: #eb1515;
-  background-color: rgb(255, 255, 255);
-  border-radius: 60px;
+.tabb{
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 
-.tabContainer {
+select{
+  font-family:'Mukta', sans-serif;
+  font-size: larger;
+  margin-top: 10%; 
+   border-radius:5px;
+   border-color: steelblue;
+   width: max-content; 
+height: fit-content;
+}
+.save{
+  font-family:'Mukta', sans-serif;
+   font-size: larger;
 
-  margin-top: 8px;
-  background: linear-gradient(to bottom, #f8cdc9, #faeaea);
-}
-table{
-  width:100%;
-  table-layout:fixed;
-
+    border-radius:5px
 }
 
-.tbl-header{
-  background-color: rgba(204, 40, 40, 0.3);
- }
-.tbl-content{
-  height:73vh;
-  overflow-x:auto;
-  margin-top: 0px;
-  border: 1px solid rgba(136, 103, 103, 0.3);
-}
-th{
-  padding: 20px 15px;
-  text-align: left;
-  font-weight: 600;
-  font-size: 12px;
-  color: rgb(0, 0, 0);
-  text-transform: uppercase;
-}
-td{
-  font-family: FontAwesome;
-font-style: normal;
-font-weight: normal;
-text-decoration: inherit;
-  padding: 10px;
-  text-align: left;
-  vertical-align:middle;
-  font-weight: 300;
-  font-size: 18px;
-  color: rgb(0, 0, 0);
-  border-bottom: solid 1px rgba(68, 46, 46, 0.1);
-}
+
+
 .submit{
   margin-left: 93.5%;
 
