--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,246 +1,104 @@
-#toggle{
-	visibility: hidden;
-	opacity: 0;
-	position: relative;
-	z-index: 99;
-  
-  }
-  
-  #toggle:checked ~ dialog {
-	display: block;
-  }
-  .popup{
-  margin-bottom: 0px;
-  
-  }
-  
-  .add{ background: skyblue;
-	color: black;
-	padding: .5em 1em;
-	border-radius: 4px;
-	top: 15%;
-  
-  }
-  
-  .close{
-  margin-left: 90%;
-  margin-bottom: 5%;
-  }
-  
-  label{
-	background: white;
-	color: black;
-	padding: .5em 1em;
-	border-radius: 2px;
-  
-  }
-  input{
-	background: skyblue;
-	border-radius: 2px;
-	border-color: black;
-  }
-  @keyframes appear {
-	0%{
-	  opacity: 0;
-	  transform: translateY(-10px);
-	}
-  }
-  
-  dialog{
-	animation: appear 350ms ease-in 1;
-	background: white;
-	max-width: 500px;
-	z-index: 99;
-	margin-left: 25%;
-	margin-right: 25%;
-	margin-top: 3%;
-	
-  }
-  /*
-  
-  .profilcard{
-	box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-	background-color: rgba(128, 128, 128, 0.096);
-  
-	border-radius: 2%;
-	  //text-align: center;
-	  margin-top: 10px;
-	  margin-left: 10%;
-	  margin-bottom: px;
-	}
-  .paiementcard{
-		box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-		background-color: rgba(128, 128, 128, 0.096);
-	  
-		border-radius: 2%;
-		  //text-align: center;
-		  margin-top: 10px;
-		  margin-left: 10%;
-		  
-		}
-  .albumcard{
-			box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-			background-color: rgba(128, 128, 128, 0.096);
-		  
-			border-radius: 2%;
-			  //text-align: center;
-			  margin-top: 10px;
-			  margin-left: 10%;
-			  
-			}
-  .evaluationcard{
-				box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
-				background-color: rgba(128, 128, 128, 0.096);
-			  
-				border-radius: 2%;
-				  //text-align: center;
-				  margin-top: 10px;
-				  margin-left: 10%;
-  }
-  .evaluationcard .card {
-	//text-align: center;
-	margin-top: 10px;
-	margin-left: 10%;
-	margin-right: 10%;
-	font-size: 20px;
-  }
-  
-  .row{
-	width: 100%;
-  }  
-  */
-  *{
-	padding: 0;
-	margin: 0;
-	font-family: sans-serif;
-  }
-  body{
-	height: 100vh;
-	background: #002f5f;
-  }
-  .container{
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	width: 100%;
-  }
-  
-  .container span{
-	text-transform: uppercase;
-	display: block;
-  }
-  .mytext1{
-	color: white;
-	font-size: 60px;
-	font-weight: 700;
-	letter-spacing: 8px;
-	margin-bottom: 20px;
-	background: #002f5f;
-	position: relative;
-	animation: text 2s 1;
-  
-  }
-  .mytext2{
-	font-size: 30px;
-	  color: #E91E63;
-	  font-weight: bold;
-	  font-family: cursive;
-  }
-  @keyframes text {
-	0%{
-	  color: black;
-	  margin-bottom: -40px;
-  
-	}
-	30%{
-	  letter-spacing: 25px;
-	  margin-bottom: -40px;
-  
-	}
-	85%{
-	  letter-spacing: 8px;
-	  margin-bottom: -40px;
-  
-	}
-  }
-  
-  
-  
-  
-  /* The Modal (background) */
-  .modal {
-  backdrop-filter: blur(20px);
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 40vh; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.178); /* Black w/ opacity */
-  animation: fadeInModal 0.3s;
-  }
-  
-  @keyframes fadeInModal {
-  0% {opacity:0;}
-  100% {opacity:1;}
-  }
-  
-  /* Modal Content */
-  .modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 10px;
-  border-radius: 20px;
-  width: fit-content;
-  animation: fadeIn 0.3s;
-  }
-  
-  @keyframes fadeIn {
-  0% {opacity:0;
-	transform: scale(0, 0);}
-  100% {opacity:1;
-	transform: scale(1, 1);}
-  
-  }
-  .modal-content h2 {
-  margin-right: 50px;
-  color: #5375bdd5;
-  }
-  .p-justify-right {
-  display: flex;
-  justify-content:flex-end;
-  }
-  
-  .p-justify-between {
-  display: flex;
-  justify-content:space-between;
-  }
-  div{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  p-menubar .p-button-rounded{
-  padding: 8px;
-  width: 38px;
-  height: 38px;
-  margin: 2px;
-  transition: 0.3s;
-  }
-  
-  
-  p-menubar .p-button-rounded:hover{
-  padding: 8px 16px;
-  width: fit-content;
-  transition: 0.3s;
-  }
-  .add:hover {
-	transform: scale(1.3);
-	text-decoration: none;
-	color: #ffffff;
-  }
+/* Importing fonts from Google */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+/* Reseting */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    background: #aac8d627;
+}
+
+.wrapper {
+    max-width: 350px;
+    min-height: 500px;
+    margin: 80px auto;
+    padding: 40px 30px 30px 30px;
+    background-color: #ecf0f3;
+    border-radius: 15px;
+    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+}
+
+.logo {
+    width: 80px;
+    margin: auto;
+}
+
+.logo img {
+    width: 100%;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0px 0px 3px #5f5f5f,
+        0px 0px 0px 5px #ecf0f3,
+        8px 8px 15px #a7aaa7,
+        -8px -8px 15px #fff;
+}
+
+.wrapper .name {
+    font-weight: 600;
+    font-size: 1.4rem;
+    letter-spacing: 1.3px;
+    padding-left: 10px;
+    color: #555;
+}
+
+.wrapper .form-field input {
+    width: 100%;
+    display: block;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.2rem;
+    color: #666;
+    padding: 10px 15px 10px 10px;
+    /* border: 1px solid red; */
+}
+
+.wrapper .form-field {
+    padding-left: 10px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
+}
+
+.wrapper .form-field .fas {
+    color: #555;
+}
+
+.wrapper .btn {
+    box-shadow: none;
+    width: 100%;
+    height: 40px;
+    background-color: #03A9F4;
+    color: #fff;
+    border-radius: 25px;
+    box-shadow: 3px 3px 3px #b1b1b1,
+        -3px -3px 3px #fff;
+    letter-spacing: 1.3px;
+}
+
+.wrapper .btn:hover {
+    background-color: #039BE5;
+}
+
+.wrapper a {
+    text-decoration: none;
+    font-size: 0.8rem;
+    color: #03A9F4;
+}
+
+.wrapper a:hover {
+    color: #039BE5;
+}
+
+@media(max-width: 380px) {
+    .wrapper {
+        margin: 30px 20px;
+        padding: 40px 15px 15px 15px;
+    }
+}
